# shut_the_box

./: CLAUDE.md  Cargo.toml  README.md  build.sh  run.sh
docs/: claude-web-research-preview-notes.md  overview.md
src/: lib.rs
wiki/: Architecture.md  Build-and-Development.md  Frontend-3D.md  Game-Logic.md  Home.md  Sequence-Diagrams.md
www/: index.html  main.js
